--- a/src/main/html/auth/index.html
+++ b/src/main/html/auth/index.html
@@ -38,7 +38,7 @@
       if (url && url.length > 1) {
         url = decodeURIComponent(url[1]);
       } else {
-        url = "http://docs.mshanken.io/auth/auth.json";
+        url = "auth.json";
       }
 
       hljs.configure({
@@ -72,9 +72,9 @@
         onFailure: function(data) {
           log("Unable to Load SwaggerUI");
         },
-        docExpansion: "none",
-        jsonEditor: false,
-        defaultModelRendering: 'schema',
+        docExpansion: "list",
+        jsonEditor: true,
+        defaultModelRendering: 'model',
         showRequestHeaders: false,
         showOperationIds: false
       });
@@ -93,11 +93,14 @@
 <body class="swagger-section">
 <div id='header'>
   <div class="swagger-ui-wrap">
-    <a id="logo" href="http://docs.mshanken.io"><img class="logo__img" alt="msc_logo" height="30" width="30" src="http://assets.mshanken.com/media/images/msc_logo.png" /><span class="logo__title">M. Shanken Docs</span></a>
-    <form id='api_selector'>
-      <div class='input'><input placeholder="http://example.com/api" id="input_baseUrl" name="baseUrl" type="text"/></div>
-      <div id='auth_container'></div>
-      <div class='input'><a id="explore" class="header__btn" href="#" data-sw-translate>Explore</a></div>
+      <a id="logo" href="/"><img class="logo__img" alt="msc_logo" height="30" width="30" src="http://assets.mshanken.com/media/images/msc_logo.png" /><span class="logo__title">M.Shanken Service Docs</span></a>
+      <form id='api_selector'>
+      <select name="services" onchange="location = this.value;">
+            <option value="" disabled="disabled" selected="selected">Please select a service</option>
+            <option value="/wine">Wine Service</option>
+            <option value="/auth">Auth Service</option>
+    </select>
+    <div id='auth_container'></div>
     </form>
   </div>
 </div>
