--- a/src/main/html/wine/index.html
+++ b/src/main/html/wine/index.html
@@ -72,10 +72,10 @@
         onFailure: function(data) {
           log("Unable to Load SwaggerUI");
         },
-        docExpansion: "none",
+        docExpansion: "list",
         jsonEditor: false,
         defaultModelRendering: 'schema',
-        showRequestHeaders: false,
+        showRequestHeaders: true,
         showOperationIds: false
       });
 
